Fix menu spacing

--- a/docroot/sites/default/themes/maxim_base/css/global.css
+++ b/docroot/sites/default/themes/maxim_base/css/global.css
@@ -36,7 +36,7 @@ p { font-size:1.2em; }
 #region-menu { position:relative; width:100%; background-color:#000; }
 #region-menu nav.navigation h2 { display:none; }
 #region-menu nav.navigation ul.main-menu { width:100%; margin-bottom:0; float: left; color:#FFF; }
-#region-menu nav.navigation ul.main-menu li { float:left; margin-left:10px; padding:0 4px; line-height:2.7em; border-top:3px solid #000;  }
+#region-menu nav.navigation ul.main-menu li { float:left; margin-left:6px; padding:0 4px; line-height:2.7em; border-top:3px solid #000;  }
 #region-menu nav.navigation ul.main-menu li.first { margin-left: 145px; }
 #region-menu nav.navigation ul.main-menu li a { color:#FFF; font-weight:bold; font-size:1.3em; text-decoration:none; text-transform:uppercase;  }
 #region-menu nav.navigation ul.main-menu li.active-trail { border-top:3px solid #FFF000; }
